--- a/consumer/src/main/resources/local/bootstrap.yml
+++ b/consumer/src/main/resources/local/bootstrap.yml
@@ -15,6 +15,9 @@ spring:
         defaultContext: apps
         profileSeparator: '::'
 
+feign:
+  hystrix:
+    enabled: false
 
 management:
   security:
