--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>producter</module>
+        <module>producer</module>
         <module>consumer</module>
     </modules>
 
